@@ -2,7 +2,7 @@ use strict;
 use warnings;
 use FindBin qw/$Bin/;
 use lib "$Bin/lib";
-use Test::More tests => 2;
+use Test::More tests => 1;
 use Test::Exception;
 use Carp ();
 
@@ -13,16 +13,6 @@ use Carp ();
 
 # This is/was demonstrated by Catalyst::Controller::WrapCGI
 # and Catalyst::Plugin::Cache::Curried
-
-{    
-    package TestAppWithMeta;
-    use Catalyst;
-    no warnings 'redefine';
-    sub meta {}
-}
-BEGIN {
-    lives_ok { TestAppWithMeta->setup } 'Can setup an app which defines its own meta method';
-}
 
 use Catalyst::Test 'TestAppWithMeta';
 
